# cpwl_approximation_of_xy

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
cpwllib/: __init__.py  implementation.py
cpwllib/tempregpy/: __init__.py  __main__.py  build_mathopt.py  build_pywraplp.py  logging_config.py  utils.py
cpwllib/tempregpy/model/: __init__.py  constants.py  functions.py  model.py  product_linearization.py  product_linearization_simple.py  results.py  rough_zones.py  utils.py  xy_plot_and_constraints.py
cpwllib/tempregpy/user/: __init__.py  input.py
data/: User Inputs.xlsx
scripts/: script-run_tempregpy_sims.py  script-test_sum_of_convex_mathopt.py
scripts/figure/: figure-different_approximations.py
