[project]
name = "cpwllib"
version = "0.0.1"
authors = [
  { name="Quentin Ploussard", email="qploussard@anl.gov" },
  { name="Maris Usis", email="musis@anl.gov" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
packages = ["cpwllib"]
